--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.2",
-    "three-globe": "^2.45.0"
+    "three-globe": "^2.45.0",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
